// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tag Matches earlier configuration 1`] = `
.jklsEJ {
  background-color: hsl(161,97%,38%);
  border: 0;
  color: white;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.jklsEJ:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.jklsEJ:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.jklsEJ:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw jklsEJ"
/>
`;

exports[`Button tag Matches earlier configuration if alternative and disabled prop is true 1`] = `
.jHVgyi {
  background-color: hsl(290,80%,44%);
  border: 0;
  color: white;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.jHVgyi:hover {
  background-color: hsl(290,80%,39%);
  border: 0;
}

.jHVgyi:disabled {
  background-color: hsl(290,40%,39%);
  border: 0;
}

.jHVgyi:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw jHVgyi"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if alternative and outlined prop is true 1`] = `
.hKMOLu {
  background-color: transparent;
  border: 3px solid hsl(290,80%,44%);
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.hKMOLu:hover {
  background-color: transparent;
  border: 3px solid hsl(290,80%,39%);
}

.hKMOLu:disabled {
  background-color: transparent;
  border: 3px solid hsl(290,40%,39%);
}

.hKMOLu:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw hKMOLu"
/>
`;

exports[`Button tag Matches earlier configuration if alternative is true 1`] = `
.jHVgyi {
  background-color: hsl(290,80%,44%);
  border: 0;
  color: white;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.jHVgyi:hover {
  background-color: hsl(290,80%,39%);
  border: 0;
}

.jHVgyi:disabled {
  background-color: hsl(290,40%,39%);
  border: 0;
}

.jHVgyi:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw jHVgyi"
/>
`;

exports[`Button tag Matches earlier configuration if alternative, disabled and outlined prop is true 1`] = `
.hKMOLu {
  background-color: transparent;
  border: 3px solid hsl(290,80%,44%);
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.hKMOLu:hover {
  background-color: transparent;
  border: 3px solid hsl(290,80%,39%);
}

.hKMOLu:disabled {
  background-color: transparent;
  border: 3px solid hsl(290,40%,39%);
}

.hKMOLu:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw hKMOLu"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if disabled prop is true 1`] = `
.jklsEJ {
  background-color: hsl(161,97%,38%);
  border: 0;
  color: white;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.jklsEJ:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.jklsEJ:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.jklsEJ:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw jklsEJ"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if outlined is true 1`] = `
.brpYmf {
  background-color: transparent;
  border: 3px solid hsl(161,97%,38%);
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
}

.brpYmf:hover {
  background-color: transparent;
  border: 3px solid hsl(161,97%,33%);
}

.brpYmf:disabled {
  background-color: transparent;
  border: 3px solid hsl(161,57%,33%);
}

.brpYmf:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw brpYmf"
/>
`;
